<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/display_header">
        <ListPreference
            app:defaultValue="@string/pref_dark_auto"
            app:entries="@array/dark_mode"
            app:entryValues="@array/dark_mode_value"
            app:key="@string/pref_key_dark"
            app:title="@string/pref_dark_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/display_version">
        <Preference
            android:title="@string/pref_appVersion_title"
            android:summary="@string/pref_appVersion_summary"
            android:selectable="false" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>