<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorBackground">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appBarTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/app_name"
            app:titleCentered="true"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:navigationIconTint="@color/colorOnBackground" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="bottom|start"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_newsImage"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/cd_image_news"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:src="@tools:sample/backgrounds/scenic"/>

            <TextView
                android:id="@+id/tv_newsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/iv_newsImage"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/tv_newsSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/tv_newsTitle"
                tools:text="@string/news_source" />

            <TextView
                android:id="@+id/tv_newsContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/tv_newsSource"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/tv_newsAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/tv_newsContent"
                tools:text="@string/news_author" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/cd_favorite_news"
        app:fabSize="auto"
        tools:src="@drawable/baseline_favorite_border_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>